<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item  android:id="@+id/home_company"
       android:title="@string/home"></item>
    <item
        android:title="@string/add_services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/add_car"
                    android:title="@string/cars" />
                <item
                    android:id="@+id/add_part"
                    android:title="@string/spare_parts" />

            </group>
        </menu>
    </item>

    <item
        android:title="@string/Manage_Requests">
    <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/buy_request"
            android:title="@string/Buy_Requests" />
        <item
            android:id="@+id/maintenance_request"
            android:title="@string/Maintenance_Requests" />
        <item
            android:id="@+id/leasing_request"
            android:title="@string/Leasing_Requests" />
        </group>
       </menu>
    </item>




    <group android:checkableBehavior="single">
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
         />

      </group>
     </menu>


