<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/baj"
          android:layout_gravity="center"
            android:padding="10dp"
            android:layout_margin="20dp">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_type"
                android:hint="@string/car_type"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_model"
                android:hint="@string/car_model"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_price"
                android:hint="@string/price_car"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_view"
                android:fontFamily="casual"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <CheckBox
                android:id="@+id/saleing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saleing"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"
                />

            <CheckBox
                android:id="@+id/leasing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="@string/Leasing" />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_details"
                android:lines="4"
                android:gravity="top"
                android:hint="@string/car_details"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:fontFamily="casual"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/upload_Image"
                    />
                <ImageButton
                    android:layout_width="40dp"
                    android:id="@+id/img"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@android:drawable/ic_menu_upload"
                    />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/showImage"/>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:id="@+id/add_car"
                android:layout_marginTop="30dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>