<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/baj"
        android:layout_margin="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/saller_name"
                android:hint="@string/name_saller"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/saller_phone"
                android:hint="@string/phone_saller"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_type"
                android:hint="@string/car_type"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_price"
                android:hint="@string/price_car"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/car_details"
                android:hint="@string/car_details"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:fontFamily="casual"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:text="@string/upload_Image"
                />
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/ic_menu_upload"
                    />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>