<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/baj"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:layout_gravity="center">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/name_part"
                android:hint="@string/part_name"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/number_part"
                android:hint="@string/part_number"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/part_model"
                android:hint="@string/part_model"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/part_price"
                android:hint="@string/part_price"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/part_details"
                android:lines="4"
                android:gravity="top"
                android:hint="@string/part_details"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:fontFamily="casual"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/upload_Image"
                    />
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:id="@+id/img"
                    android:background="@android:drawable/ic_menu_upload"
                    />

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:id="@+id/add_part"
                android:layout_marginTop="30dp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:background="@color/colorPrimaryDark"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>