<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baj"

    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view"
    android:orientation="vertical">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layoutDirection="ltr"
        android:background="@color/colorPrimaryDark"
        >

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:src="?android:attr/homeAsUpIndicator" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup"
            android:gravity="center"
            android:textColor="@color/baj"
            android:textSize="25sp"
            android:textStyle="bold"
             android:layout_marginLeft="30dp"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:id="@+id/signup_btn"
                android:text="@string/next"
                android:textColor="@color/baj"
                 android:textStyle="bold"
                android:textSize="22sp"
                android:padding="10dp"/>

        </RelativeLayout>
    </Toolbar>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
             android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>   <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
         android:textStyle="bold"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="16sp" />
</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
             android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/black"

            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
             android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
             android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
             android:textStyle="bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/zip"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                 android:textStyle="bold"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/city"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                 android:textStyle="bold"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
         android:text="@string/type"/>
        <RadioGroup
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"

            android:textSize="18sp"
             android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"

                android:text="@string/company"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioCustomer"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                 android:layout_height="wrap_content"
                android:text="@string/customer" />

        </RadioGroup>


    </LinearLayout>
</LinearLayout>
</LinearLayout>
</ScrollView>
